--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -6,7 +6,14 @@
     "openMenu": "Abrir menú de navegación",
     "toggleTheme": "Alternar modo oscuro",
     "changeLanguage": "Cambiar idioma",
-    "siteTitle": "Sistema de Solicitud de Empleo"
+    "changeTextSize": "Cambiar tamaño de texto",
+    "siteTitle": "Sistema de Solicitud de Empleo",
+    "textSize": {
+      "small": "Pequeño",
+      "medium": "Mediano",
+      "large": "Grande",
+      "xLarge": "Extra Grande"
+    }
   },
   "home": {
     "title": "Portal de Empleo",
