Apply for job role UI

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -121,6 +121,36 @@
     "clearAllFilters": "Clear All Filters",
     "confirmDeleteJob": "Are you sure you want to delete"
   },
+  "jobApplication": {
+    "title": "Apply for Position",
+    "subtitle": "Submit your application for",
+    "jobSummary": "Position Summary",
+    "formTitle": "Application Form",
+    "personalInfo": "Personal Information",
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "email": "Email Address",
+    "phone": "Phone Number",
+    "address": "Address",
+    "documents": "Documents",
+    "cv": "CV/Resume",
+    "cvHint": "Upload your CV in PDF, DOC, or DOCX format (max 5MB)",
+    "coverLetter": "Cover Letter",
+    "coverLetterHint": "Optional - Upload your cover letter in PDF, DOC, or DOCX format (max 5MB)",
+    "additionalInfo": "Additional Information",
+    "whyInterested": "Why are you interested in this position?",
+    "whyInterestedPlaceholder": "Tell us what attracts you to this role and our company...",
+    "relevantExperience": "Relevant Experience",
+    "relevantExperiencePlaceholder": "Describe your relevant experience and skills for this position...",
+    "additionalComments": "Additional Comments",
+    "additionalCommentsPlaceholder": "Any additional information you'd like to share...",
+    "dataConsent": "I consent to the processing of my personal data for this job application",
+    "marketingConsent": "I would like to receive updates about future job opportunities",
+    "submitApplication": "Submit Application",
+    "applicationSubmitted": "Your application has been submitted successfully!",
+    "thankYou": "Thank you for your interest. We will review your application and contact you soon.",
+    "applicationError": "There was an error submitting your application. Please try again."
+  },
   "footer": {
     "madeWith": "Made with ❤️ by Kainos",
     "copyright": "© 2025 Job Application System. All rights reserved.",
