--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -121,6 +121,36 @@
     "clearAllFilters": "Eliminar Todos los Filtros",
     "confirmDeleteJob": "¿Estás seguro de que quieres eliminar"
   },
+  "jobApplication": {
+    "title": "Solicitar Puesto",
+    "subtitle": "Envía tu solicitud para",
+    "jobSummary": "Resumen del Puesto",
+    "formTitle": "Formulario de Solicitud",
+    "personalInfo": "Información Personal",
+    "firstName": "Nombre",
+    "lastName": "Apellido",
+    "email": "Dirección de Email",
+    "phone": "Número de Teléfono",
+    "address": "Dirección",
+    "documents": "Documentos",
+    "cv": "CV/Currículum",
+    "cvHint": "Sube tu CV en formato PDF, DOC, o DOCX (máx 5MB)",
+    "coverLetter": "Carta de Presentación",
+    "coverLetterHint": "Opcional - Sube tu carta de presentación en formato PDF, DOC, o DOCX (máx 5MB)",
+    "additionalInfo": "Información Adicional",
+    "whyInterested": "¿Por qué estás interesado en este puesto?",
+    "whyInterestedPlaceholder": "Cuéntanos qué te atrae de este rol y nuestra empresa...",
+    "relevantExperience": "Experiencia Relevante",
+    "relevantExperiencePlaceholder": "Describe tu experiencia y habilidades relevantes para este puesto...",
+    "additionalComments": "Comentarios Adicionales",
+    "additionalCommentsPlaceholder": "Cualquier información adicional que te gustaría compartir...",
+    "dataConsent": "Consiento el procesamiento de mis datos personales para esta solicitud de empleo",
+    "marketingConsent": "Me gustaría recibir actualizaciones sobre futuras oportunidades de empleo",
+    "submitApplication": "Enviar Solicitud",
+    "applicationSubmitted": "¡Tu solicitud ha sido enviada exitosamente!",
+    "thankYou": "Gracias por tu interés. Revisaremos tu solicitud y te contactaremos pronto.",
+    "applicationError": "Hubo un error al enviar tu solicitud. Por favor, inténtalo de nuevo."
+  },
   "footer": {
     "madeWith": "Hecho con ❤️ por Kainos",
     "copyright": "© 2025 Sistema de Solicitud de Empleo. Todos los derechos reservados.",
