--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -121,6 +121,36 @@
     "clearAllFilters": "Effacer Tous les Filtres",
     "confirmDeleteJob": "Êtes-vous sûr de vouloir supprimer"
   },
+  "jobApplication": {
+    "title": "Postuler pour le Poste",
+    "subtitle": "Soumettez votre candidature pour",
+    "jobSummary": "Résumé du Poste",
+    "formTitle": "Formulaire de Candidature",
+    "personalInfo": "Informations Personnelles",
+    "firstName": "Prénom",
+    "lastName": "Nom de Famille",
+    "email": "Adresse Email",
+    "phone": "Numéro de Téléphone",
+    "address": "Adresse",
+    "documents": "Documents",
+    "cv": "CV",
+    "cvHint": "Téléchargez votre CV en format PDF, DOC, ou DOCX (max 5MB)",
+    "coverLetter": "Lettre de Motivation",
+    "coverLetterHint": "Optionnel - Téléchargez votre lettre de motivation en format PDF, DOC, ou DOCX (max 5MB)",
+    "additionalInfo": "Informations Supplémentaires",
+    "whyInterested": "Pourquoi êtes-vous intéressé par ce poste?",
+    "whyInterestedPlaceholder": "Dites-nous ce qui vous attire dans ce rôle et notre entreprise...",
+    "relevantExperience": "Expérience Pertinente",
+    "relevantExperiencePlaceholder": "Décrivez votre expérience et compétences pertinentes pour ce poste...",
+    "additionalComments": "Commentaires Supplémentaires",
+    "additionalCommentsPlaceholder": "Toute information supplémentaire que vous souhaitez partager...",
+    "dataConsent": "Je consens au traitement de mes données personnelles pour cette candidature",
+    "marketingConsent": "Je souhaite recevoir des mises à jour sur les futures opportunités d'emploi",
+    "submitApplication": "Soumettre la Candidature",
+    "applicationSubmitted": "Votre candidature a été soumise avec succès!",
+    "thankYou": "Merci pour votre intérêt. Nous examinerons votre candidature et vous contacterons bientôt.",
+    "applicationError": "Une erreur s'est produite lors de la soumission de votre candidature. Veuillez réessayer."
+  },
   "footer": {
     "madeWith": "Fait avec ❤️ par Kainos",
     "copyright": "© 2025 Système de Candidature. Tous droits réservés.",
