--- a/locales/pl/translation.json
+++ b/locales/pl/translation.json
@@ -121,6 +121,36 @@
     "clearAllFilters": "Wyczyść Wszystkie Filtry",
     "confirmDeleteJob": "Czy na pewno chcesz usunąć"
   },
+  "jobApplication": {
+    "title": "Aplikuj na Stanowisko",
+    "subtitle": "Złóż swoją aplikację na",
+    "jobSummary": "Podsumowanie Stanowiska",
+    "formTitle": "Formularz Aplikacyjny",
+    "personalInfo": "Informacje Osobiste",
+    "firstName": "Imię",
+    "lastName": "Nazwisko",
+    "email": "Adres Email",
+    "phone": "Numer Telefonu",
+    "address": "Adres",
+    "documents": "Dokumenty",
+    "cv": "CV",
+    "cvHint": "Prześlij swoje CV w formacie PDF, DOC lub DOCX (maks 5MB)",
+    "coverLetter": "List Motywacyjny",
+    "coverLetterHint": "Opcjonalnie - Prześlij swój list motywacyjny w formacie PDF, DOC lub DOCX (maks 5MB)",
+    "additionalInfo": "Dodatkowe Informacje",
+    "whyInterested": "Dlaczego jesteś zainteresowany tym stanowiskiem?",
+    "whyInterestedPlaceholder": "Powiedz nam, co przyciąga cię w tej roli i naszej firmie...",
+    "relevantExperience": "Odpowiednie Doświadczenie",
+    "relevantExperiencePlaceholder": "Opisz swoje odpowiednie doświadczenie i umiejętności na to stanowisko...",
+    "additionalComments": "Dodatkowe Komentarze",
+    "additionalCommentsPlaceholder": "Wszelkie dodatkowe informacje, którymi chciałbyś się podzielić...",
+    "dataConsent": "Wyrażam zgodę na przetwarzanie moich danych osobowych w celu tej aplikacji o pracę",
+    "marketingConsent": "Chciałbym otrzymywać aktualizacje o przyszłych możliwościach zatrudnienia",
+    "submitApplication": "Złóż Aplikację",
+    "applicationSubmitted": "Twoja aplikacja została złożona pomyślnie!",
+    "thankYou": "Dziękujemy za zainteresowanie. Przejrzymy twoją aplikację i skontaktujemy się z tobą wkrótce.",
+    "applicationError": "Wystąpił błąd podczas składania aplikacji. Spróbuj ponownie."
+  },
   "footer": {
     "madeWith": "Stworzone z ❤️ przez Kainos",
     "copyright": "© 2025 System Aplikacji o Pracę. Wszelkie prawa zastrzeżone.",
